--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,6 +131,12 @@ q:after {
     content: none;
 }
 
+.center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
